# magicmind_edge

./: README.md
buildin/cv/classification/alexnet_bn_caffe/: README.MD  README.md  run.sh
buildin/cv/classification/arcface_pytorch/: README.MD  README.md  env.sh  run.sh
buildin/cv/classification/densenet121_caffe/: README.MD  README.md  run.sh
buildin/cv/classification/densenet201_caffe/: README.MD  README.md  env.sh  run.sh
buildin/cv/classification/googlenet_bn_caffe/: README.MD  run.sh
buildin/cv/classification/inceptionv2_caffe/: README.MD  README.md  run.sh
buildin/cv/classification/inceptionv3_caffe/: README.MD  README.md  run.sh
buildin/cv/classification/inceptionv4_caffe/: README.MD  README.md  env.sh  run.sh
buildin/cv/classification/mobilenetv2_caffe/: README.MD  README.md  run.sh
buildin/cv/classification/mobilenetv3_pytorch/: README.MD  README.md  run.sh
buildin/cv/classification/resnet50_caffe/: README.MD  README.md  run.sh
buildin/cv/classification/resnext50_caffe/: README.MD  README.md  run.sh
buildin/cv/classification/senet50_caffe/: README.MD  README.md  run.sh
buildin/cv/classification/squeezenet_v1_0_caffe/: README.MD  README.md  run.sh
buildin/cv/classification/squeezenet_v1_1_caffe/: README.MD  README.md  run.sh
buildin/cv/classification/vgg16_caffe/: README.MD  README.md  run.sh
buildin/cv/detection/c3d_caffe/: README.MD  README.md  env.sh  run.sh
buildin/cv/detection/c3d_caffe/infer_cpp/: CMakeLists.txt  run.sh
buildin/cv/detection/c3d_caffe/infer_cpp/include/: post_process.hpp  pre_process.hpp
buildin/cv/detection/c3d_caffe/infer_cpp/src/: infer.cpp  post_process.cpp  pre_process.cpp
buildin/cv/detection/centernet_pytorch/: README.MD  env.sh  run.sh
buildin/cv/detection/mobilenet_ssd_caffe/: README.MD  README.md  run.sh
buildin/cv/detection/refinedet_caffe/: README.MD  env.sh  run.sh
buildin/cv/detection/retinaface_pytorch/: README.MD  env.sh  run.sh
buildin/cv/detection/ultra_fast_lane_pytorch/: README.MD  env.sh  requirements.txt  run.sh
buildin/cv/detection/yolov3_caffe/: README.MD  README.md  run.sh
buildin/cv/detection/yolov3_tiny_caffe/: README.MD  README.md  run.sh
buildin/cv/detection/yolov3_v8_pytorch/: README.MD  README.md  requirements.txt  run.sh
buildin/cv/detection/yolov4_mish_caffe/: README.MD  README.md  env.sh  run.sh
buildin/cv/detection/yolov5_v6.1_pytorch/: README.MD  README.md  run.sh
buildin/cv/detection/yolov7_pytorch/: README.MD  run.sh
buildin/cv/detection/yolov7_pytorch/infer_cpp/: CMakeLists.txt  run.sh
buildin/cv/detection/yolov7_pytorch/infer_cpp/include/: post_process.h
buildin/cv/detection/yolov7_pytorch/infer_cpp/src/: infer.cpp  post_process.cpp  pre_process.cpp
buildin/cv/ocr/crnn_pytorch/: README.MD  env.sh  run.sh
buildin/cv/ocr/dbnet_pytorch/: README.MD  env.sh  run.sh
buildin/cv/other/openpose_caffe/: README.MD  env.sh  run.sh
buildin/cv/segmentation/deeplabv3_tf/: README.MD  README.md  env.sh  run.sh
buildin/cv/segmentation/nnUNet_pytorch/: README.MD  README.md  env.sh  run.sh
buildin/cv/utils/: build_all.sh  coco_meanAp.py  compute_coco_keypoints.py  compute_coco_mAP.py  compute_top1_and_top5.py  eval_voc.py  ijbc_eval.py  imagenet_eval.py  mj_eval.py  nnUNet_evalute.py  val.txt  voc_mIOU_eval.py  voc_mIOU_segnet.py  voc_preds_convert.py
buildin/cv/utils/rpc_server/: CMakeLists.txt  build.sh  sample_server.cc  start_rpc_server.sh
utils/: check_result.py  generate_config.py  merge_table.py  record_result.py  remote_tools.sh
utils/ci/: create_dataset_link.sh  get_edge_device.py  register.sh  test.py
utils/code_check/: Dockerfile  big_file_check.py  build_docker.sh  spell_check.py  static_memory_leak.py
utils/data/: ide.yaml  template.yaml
utils/datasets_tool/: reduce_coco.py  reduce_ijbc.py  reduce_voc2012.py
(+422 files in other folders)
